tests/fixtures/invalid/bytes_mul_float.py
# Cannot multiply Bytes and Float
x: float = b"hello" * 1.0
